<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scouting.ScoutingMatchInfo">

    <TextView
        android:id="@+id/prematchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="@string/prematch"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prematchtext">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_number"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/teamNumber"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:hint="@string/teamNumberHint"
                android:inputType="number"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/match_number"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/matchNumber"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:hint="@string/matchNumberHint"
                android:inputType="number"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scouter"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/scoutName"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:hint="@string/scoutNameHint"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/startReportButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/startReportButton"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="-267dp"
            tools:layout_editor_absoluteY="447dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>