<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_scouting"
    app:startDestination="@id/nav_scouting_main">
    <fragment
        android:id="@+id/nav_scouting_main"
        android:name="com.team2718.scoutingappcharm.scouting.FragmentScoutingMain"
        android:label="@string/navbar_scouting"
        tools:layout="@layout/fragment_scouting_main">
        <action
            android:id="@+id/action_nav_scouting_main_to_nav_scouting_match_info"
            app:destination="@id/nav_scouting_match_info" />
    </fragment>
    <fragment
        android:id="@+id/nav_scouting_match_info"
        android:name="com.team2718.scoutingappcharm.scouting.FragmentScoutingMatchInfo"
        android:label="@string/navbar_scouting_match_info"
        tools:layout="@layout/fragment_scouting_match_info">
        <action
            android:id="@+id/action_nav_scouting_match_info_to_nav_scouting_auto"
            app:destination="@id/nav_scouting_auto" />
    </fragment>
    <fragment
        android:id="@+id/nav_scouting_auto"
        android:name="com.team2718.scoutingappcharm.scouting.FragmentScoutingAuto"
        android:label="@string/navbar_auto"
        tools:layout="@layout/fragment_scouting_auto">
        <action
            android:id="@+id/action_fragmentScoutingAuto_to_fragmentScoutingTeleop"
            app:destination="@id/nav_scouting_teleop" />
    </fragment>
    <fragment
        android:id="@+id/nav_scouting_teleop"
        android:name="com.team2718.scoutingappcharm.scouting.FragmentScoutingTeleop"
        android:label="@string/navbar_teleop" >
        <action
            android:id="@+id/action_nav_scouting_teleop_to_nav_scouting_post_match"
            app:destination="@id/nav_scouting_post_match" />
    </fragment>
    <fragment
        android:id="@+id/nav_scouting_post_match"
        android:name="com.team2718.scoutingappcharm.scouting.FragmentScoutingPostMatch"
        android:label="@string/navbar_post_match"
        tools:layout="@layout/fragment_scouting_post_match" />
</navigation>